k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dt-user
  labels:
    app: dt-user
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: dartoo
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: dt-user
spec:
  selector:
    matchLabels:
      app: dt-user
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dt-user
    spec:
      containers:
      - name: dt-user
        image: ghcr.io/team-dartoo/dt-service-user:latest
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 180
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name: http
      imagePullSecrets:
      - name: ghcr-secret
