k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dt-user-svc
  labels:
    app: dt-user
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: dartoo
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: dt-user
spec:
  selector:
    app: dt-user
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
